# engineering-standards-rag-assistant

./: .gitignore  GIT_ENVIRONMENT_VERIFICATION.md  LICENSE  PLANS.md  README.md  directory_structure.txt  pyproject.toml
app/: main.py
app/api/: dependencies.py
app/api/routes/: query.py
app/api/schemas/: query.py
app/ingestion/: footnote_detector.py  footnote_linker.py  footnote_resolver.py  normalize.py  pdf_layout_extractor.py  pipeline.py  text_normalizer.py
app/llm/: embeddings.py  generation.py
app/rag/: chunking.py
app/rag/prompts/: README.md
app/services/: README.md  query_service.py
app/stores/: docstore.py  faiss_store.py  metadata_store.py
docs/: architecture.md  footnote_handling.md  ingestion.md  query_api.md
scripts/: build_index.py  footnote_phase1_debug.py  footnote_phase2_debug.py  footnote_phase2_page_debug.py  footnote_phase3_debug.py  footnote_phase4_debug.py  footnote_tests_readme.md  footnote_title_anchor_debug.py
temp/: Codex Prompt Temp.txt
temp/e2e_slice_index/: chunk_index.json  chunk_store.jsonl  index_manifest.json
temp/footnote_tests/: Codex prompt.txt  phase1_anchors.json
tests/: FOOTNOTE_PHASED_POWERSHELL_COMMANDS.md  POWERSHELL_TEST_COMMANDS.md
tests/e2e/: README.md
tests/fixtures/: phase1_anchor_debug_sample.json  phase2_bottom_region_debug_sample.json
tests/unit/: test_day2_ingestion_flow.py  test_dependencies.py  test_embedders.py  test_footnote_layout_pipeline.py  test_generation.py  test_indexing_storage.py  test_parsers_html_pdf.py  test_pdf_footnotes.py  test_query_service.py
tools/: dev_smoke.py
(+9 files in other folders)
