[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engineering-standards-rag-assistant"
version = "0.1.0"
description = "Scaffolded RAG assistant"
requires-python = ">=3.11"

[project.optional-dependencies]
semantic = [
  "sentence-transformers>=2.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "data*", "temp*", "docker*", "docs*", "scripts*", "tools*"]
